src/app.css
/* ... */
.faq-question svg.rotated {
	transform: rotate(45deg);
}

.faq-question:hover,
.faq-question.active:hover {
	color: var(--grey-5);
}

.faq-question:hover svg {
	fill: var(--grey-5);
}

.faq-question.active {
	color: var(--color-text);
}

.faq-answer {
	overflow: hidden;
	max-height: 0;
	transition:
		max-height 0.3s ease,
		padding 0.3s ease;
	padding: 0;
}

.faq-answer.active {
	max-height: 125px;
	padding: 0 0 16px 0;
}

.faq-answer p {
	color: var(--color-text-2);
}

.faq-question span.rotated svg {
	transform: rotate(90deg);
}

